--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BakingApp</string>
+    <string name="recipe_image_description">Recipe image</string>
+    <string name="recipe_container">View recipe</string>
+    <string name="servings_label">Servings:</string>
 </resources>
