--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="recipe_image_description">Recipe image</string>
     <string name="recipe_container">View recipe</string>
     <string name="servings_label">Servings:</string>
+    <string name="error_message">An error has occurred. Please check your Internet connection.</string>
 </resources>
