--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="recipe_container">View recipe</string>
     <string name="servings_label">Servings:</string>
     <string name="error_message">An error has occurred. Please check your Internet connection.</string>
+
+
+    <string name="ingredients_label">Ingredients</string>
+    <string name="steps_label">Steps</string>
+
+    <string name="detail_error_message">Recipe data is not available</string>
 </resources>
