Added StepDetail Activity. The working version is yet to implement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="steps_label">Steps</string>
 
     <string name="detail_error_message">Recipe data is not available</string>
+    <string name="button_label_previous">\u003C Previous</string>
+    <string name="button_label_next">Next \u003E</string>
 </resources>
